# stock-mover-screener

./: .env.example  .gitignore  README.md  pyproject.toml
config/: catalyst.json  dilution.json  fundamentals.json  hype.json  labels.json  liquidity.json  premarket_scan.json  squeeze.json  universe.json
examples/: sample_premarket.csv  sample_results.csv
src/stock_mover_screener/: __init__.py  catalyst.py  cli.py  dashboard.py  dilution.py  fundamentals.py  hype.py  labels.py  liquidity.py  pipeline.py  premarket.py  runner.py  squeeze.py  universe.py
src/stock_mover_screener/providers/: __init__.py  alpaca.py  env.py  finra.py  fmp.py  sec_edgar.py
tests/: test_alpaca_provider.py  test_catalyst.py  test_cli.py  test_dashboard.py  test_dilution.py  test_finra_provider.py  test_fmp_provider.py  test_fundamentals.py  test_hype.py  test_labels.py  test_liquidity.py  test_pipeline.py  test_premarket.py  test_runner.py  test_sec_edgar_provider.py  test_squeeze.py  test_universe.py
